@@ -8,6 +8,14 @@ FastLog 开发日志
 
 # 编码历史
 
+* 2021年6月25日
+	* decoder: json 输出 的支持(1): 框架 2021年6月25日11:48:30
+	* decoder: 搜索的子字符串查找`log_search_list__iter3()`
+	* 日志的级别激活与去激活,见`fastlog_level()`和`__curr_level`
+	* decoder: 将`2021年6月23日`编码应用于命令行和CLI
+				因为 getopt 参数支持多重过滤，所以不将其应用于 getopt 命令行
+				我现在决定 getopt 和 CLI 都先不使用`2021年6月23日`开发的功能
+
 * 2021年6月23日
 	* decoder: 函数名，文件名，线程名的红黑树(红黑树节点中包含日志链表)
 				用于提高查询效率,见`log_search_list__iter2()`
